# 22s-pa01-misery

./: 22s_pa01_misery  BruteForceAlgo.cpp  BruteForceAlgo.h  CMakeLists.txt  CustomAlgo.cpp  CustomAlgo.h  MostExpensiveFirstAlgo.cpp  README.md  main.cpp
.github/: workflows
.github/workflows/: cmake.yml
input/: PictureInfo-bruteforce.txt  PictureInfo-custom.txt  PictureInfo-highvalue.txt  PictureInfo.txt  PictureInfo_2-custom.txt  PictureInfo_2-highvalue.txt  test-bruteforce.txt  test-custom.txt  test-highvalue.txt  test.txt
src/: BruteForceAlgo.cpp  BruteForceAlgo.h  CustomAlgo.cpp  CustomAlgo.h  MostExpensiveFirstAlgo.cpp  MostExpensiveFirstAlgo.h  main.cpp
